# Mandelbrot_CUDA

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json  make.ps1
include/: Window.h  stbi_wrapper.h
src/: Window.cpp  main.cu  stbi_wrapper.c
